--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "json-server": "^0.17.4",
     "moment": "^2.29.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
