--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.6.0",
+    "i18next-vue": "^3.0.0",
     "json-server": "^0.17.4",
     "moment": "^2.29.4",
     "vue": "^3.3.4",
