--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/services/getWEATHER.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","src/services/getWeather.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
