fix :change namefile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noFallthroughCasesInSwitch": true
   },
 
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/services/getWeather.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/services/getWEATHER.ts"],
 
   "references": [{ "path": "./tsconfig.node.json" }]
 }
